--- a/yaml_files/include/inf_smashInf_LCDMt_scan.yaml
+++ b/yaml_files/include/inf_smashInf_LCDMt_scan.yaml
@@ -15,13 +15,13 @@ tau_reio:
   fixed_value: 7.25805e-02
 N_pivot:
   prior_type: flat
-  range: [40.0,70.0]
+  range: [50.0,70.0]
 log10_xi:
   prior_type: flat
-  range: [-4.0,4.0]
+  range: [-4.0,2.0]
 log10_beta:
   fixed_value: 0.0
 log10_lambda:
   prior_type: flat
-  range: [-15.0,0.0]
+  range: [-14.0,-6.0]
 
