--- a/yaml_files/CosmoBit_AlterBBN.yaml
+++ b/yaml_files/CosmoBit_AlterBBN.yaml
@@ -16,12 +16,12 @@
 #======== Input parameter declarations =======
 Parameters:
 
- LCDM: !import include/LCDM_scan.yaml
+ LCDM_dNeff_Smu: !import include/LCDM_dNeff_Smu_scan.yaml
 
  #eta:
  #  prior_type: flat
  #  range: [4,8]
-  #Planck_lite: !import include/Planck_lite_scan.yaml
+ Planck_lite: !import include/Planck_lite_scan.yaml
 
 #======== Prior setup ========
 Priors:
@@ -59,15 +59,15 @@ ObsLikes:
     module:       CosmoBit
     type:         double
 
-  - purpose:       LogLike
+  - purpose:      LogLike
     capability:   Helium_abundance
     module:       CosmoBit
     type:         double
 
-# - purpose:      LogLike
-#   capability:   compute_Planck_lowp_TT_loglike
-#   module:       CosmoBit
-#   type:         double
+  - purpose:      LogLike
+    capability:   compute_Planck_high_TT_loglike
+    module:       CosmoBit
+    type:         double
 
 #======== Rule entries ========
 Rules:
@@ -88,13 +88,21 @@ Rules:
 ##  CLASS. (k_pivot = 0.05 is needed for the right
 ##  value of A_s, according to J. Lesgourgues)
 ####
-
-
-  - capability: AlterBBN_modelinfo
+  - capability: class_set_parameter
     options:
+      class_dict:
+        T_ncdm: 0.71611
+        k_pivot: 0.05
+
+  - capability: compute_Planck_high_TT_loglike
+    function: function_Planck_high_TT_lite_loglike
+    module: CosmoBit
+
+  - capability: plc_2_0_init
+    options:
+      planck_path: /home/janina/code/PlanckLike/plc_2.0
       #eta: 5.3
-      dNeff: 0
-      #planck_path: /home/janina/code/PlanckLike/plc_2.0
+     # dNeff: 0
       #planck_path: /home/janina/code/gambit_devel/Backends/installed/plc/2.0/plc-2.0
 
 #======== Logging setup ========
