--- a/SingletDMZ3_semi_annihilations.yaml
+++ b/SingletDMZ3_semi_annihilations.yaml
@@ -96,8 +96,8 @@ ObsLikes:
     - capability: lnL_high_scale_vacuum
       purpose: LogLike
 
-    - capability: check_perturbativity_to_lambda_min
-      purpose: LogLike
+    #- capability: check_perturbativity_to_lambda_min
+    #  purpose: LogLike
 
     # Dark matter likelihoods
     - capability: lnL_oh2
@@ -136,15 +136,15 @@ ObsLikes:
       purpose:    LogLike
 
     # Observables
-    - capability: find_non_perturb_scale
-      function: find_non_perturb_scale_SingletDMZ3
+    - capability: scale_of_nonperturbativity
+      function: find_non_perturb_scale_ScalarSingletDM_Z3
       module: SpecBit
       purpose: Observable
 
-    - capability: get_lambdaB
+    - capability: lambdaB
       purpose: Observable
 
-    - capability: expected_lifetime
+    - capability: expected_vacuum_lifetime
       purpose: Observable
 
     - capability: lnL_alpha_s
@@ -156,21 +156,21 @@ ObsLikes:
 
     # Get fraction of semi-annhillation
     - purpose: Observable
-      capability: get_channel_MicrOmegas
+      capability: semi_annihilation_fraction
 
-    - capability: SingletDMZ3_spectrum
+    - capability: ScalarSingletDM_Z3_spectrum
       purpose: Observable
-      function: get_SingletDMZ3_spectrum_as_map
+      function: get_ScalarSingletDM_Z3_spectrum_as_map
       dependencies:
-         - capability: SingletDMZ3_spectrum
+         - capability: ScalarSingletDM_Z3_spectrum
            type: Spectrum
 
 Rules:
 
   # Compute spectrum with FS and check for perturbitivity up to top mass scale (default).
 # Invalidate if not perturabitive.
- # - capability: SingletDMZ3_spectrum
- #   function: get_SingletDMZ3_spectrum_pole
+ # - capability: ScalarSingletDM_Z3_spectrum
+ #   function: get_ScalarSingletDM_Z3_spectrum_pole
  #   options:
  #     check_perturb: false
  #     check_perturb_pts: 10
@@ -183,8 +183,8 @@ Rules:
   - capability: RD_fraction
     function: RD_fraction_leq_one
 
-  - capability: vacuum_stability
-    function: find_min_lambda_SingletDMZ3
+  - capability: high_scale_vacuum_info
+    function: find_min_lambda_ScalarSingletDM_Z3
     module: SpecBit
 
   - capability: lnL_oh2
@@ -196,7 +196,7 @@ Rules:
        oh2_fractional_theory_error: 0.05
 
 
-  - function: MicrOmegas_SingletDMZ3_3_6_9_2_init
+  - function: MicrOmegas_ScalarSingletDM_Z3_3_6_9_2_init
     options:
        VZdecay: 1 # 0 - no 3 body final states, 1 - virtual Z in annihilations, 2 - virtual Z in coannihilations
        VWdecay: 1 # 0 - no 3 body final states, 1 - virtual W in annihilations, 2 - virtual W in coannihilations
@@ -211,7 +211,7 @@ Rules:
       fast: 1  # 0: standard (default), 1: fast
       Beps: 1e-5  #  1e-5: standard, 1: switches coann off
     backends:
-    - {backend: MicrOmegas_SingletDMZ3}
+    - {backend: MicrOmegas_ScalarSingletDM_Z3}
 
   - capability: RD_oh2
     function: RD_oh2_MicrOmegas
@@ -219,7 +219,7 @@ Rules:
   - capability: get_channel_MicrOmegas
     function: get_channel_MicrOmegas
     backends:
-    - {backend: MicrOmegas_SingletDMZ3}
+    - {backend: MicrOmegas_ScalarSingletDM_Z3}
 
   # Choose to use detailed Fermi Pass 8 dwarf likelihoood from gamlike
   - capability: lnL_FermiLATdwarfs
@@ -233,7 +233,7 @@ Rules:
 
   # Use DarkBit's own calculations of the direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_SingletDMZ3
+    function: DD_couplings_ScalarSingletDM_Z3
 
   # Choose to get decays from DecayBit proper, not from an SLHA file.
   - capability: decay_rates
