--- a/yaml_files/DiracSingletDM_Z2.yaml
+++ b/yaml_files/DiracSingletDM_Z2.yaml
@@ -1,6 +1,6 @@
 #################################################################################################
 #
-#      MajoranaDM
+#      DiracSingletDM_Z2
 #
 #################################################################################################
 
@@ -12,11 +12,11 @@ Parameters:
     mH:
       range: [124.1, 127.3]
 
-  MajoranaDM:
-    mX: 
+  DiracSingletDM_Z2:
+    mF:
       range: [45., 10000.]
       prior_type: log
-    lX: 
+    lF:
       range: [1e-6, 1]
       prior_type: log
     xi:
@@ -35,11 +35,11 @@ Parameters:
   Halo_gNFW_rho0:
     rho0:
       range: [0.2, 0.8]
-    v0: 
+    v0:
       range: [216, 264]
     vesc:
       range: [437, 629]
-    vrot: 
+    vrot:
       same_as: Halo_gNFW_rho0::v0
     rs: 20.0
     r_sun: 8.5
@@ -58,7 +58,7 @@ ObsLikes:
     # LHC likelihoods
     - capability: lnL_Higgs_invWidth
       purpose:    LogLike
-      
+
     # Precision physics likelihoods
     - capability: lnL_h_mass
       purpose:    LogLike
@@ -70,67 +70,68 @@ ObsLikes:
     # Indirect detection
     - capability: lnL_FermiLATdwarfs
       purpose:    LogLike
-      
+
     - capability: IC79_loglike
       purpose:    LogLike
-      
-    # Direct detection  
+
+    # Direct detection
     - capability: LUX_2016_LogLikelihood
       purpose:    LogLike
 
     - capability: XENON1T_2018_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: PandaX_2016_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: PandaX_2017_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: PICO_60_2017_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: CRESST_II_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: CDMSlite_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: DarkSide_50_LogLikelihood
       purpose:    LogLike
-      
+
     # SI nuclear nuisance parameter likelihood
     - capability: lnL_SI_nuclear_parameters
       purpose:    LogLike
-      
-    # SM nuisance parameter likelihoods     
+
+    # SM nuisance parameter likelihoods
     - capability: lnL_alpha_s
-      purpose:    LogLike    
-                    
+      purpose:    LogLike
+
     # DM Local Halo likelihoods
     - capability: lnL_rho0
       purpose: LogLike
-      
+
     - capability: lnL_v0
       purpose: LogLike
-      
+
     - capability: lnL_vesc
       purpose: LogLike
-      
+
     # Other observables
     - capability: RD_oh2
       purpose:    Observable
 
     - capability: mwimp
       purpose:    Observable
-      
+
     - capability: sigmav
       purpose:    Observable
-      
+
     - capability: sigma_SI_p
       purpose:    Observable
 
 ##############################################################################################
+
 Rules:
 
   # Use the DarkBit native calculator for the relic density
@@ -140,21 +141,21 @@ Rules:
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
-      
+
   # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_v0
     function: lnL_v0_gaussian
     options:
       v0_obs: 240
       v0_obserr: 8
-            
+
   # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
   - capability: lnL_vesc
     function: lnL_vesc_gaussian
     options:
       vesc_obs: 533
       vesc_obserr: 31.9
-      
+
   # Set sigmal to 50+/- 15 MeV based on Bishara et al [arXiv:1707.06998]
   - capability: lnL_SI_nuclear_parameters
     function: lnL_sigmas_sigmal
@@ -167,7 +168,7 @@ Rules:
   # Choose to use capgen for solar capture
   - capability: capture_rate_Sun
     function: capture_rate_Sun_vnqn
- 
+
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
     function: RD_fraction_leq_one
@@ -183,8 +184,8 @@ Rules:
     function: all_decays
 
   # Choose to obtain spectrum from the SpecBit module
-  - capability: MajoranaDM_spectrum
-    function: get_MajoranaDM_spectrum
+  - capability: DiracSingletDM_Z2_spectrum
+    function: get_DiracSingletDM_Z2_spectrum
     options:
       impose_EFT_validity: true
 
@@ -194,9 +195,9 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "MajoranaDM.hdf5"
+    output_file: "DiracSingletDM_Z2.hdf5"
     delete_file_on_restart: true
-    group: "/MDM"    
+    group: "/DDM"
 
 ##############################################################################################
 Scanner:
@@ -224,6 +225,7 @@ Scanner:
       sqrtR: 1.001
       timeout_mins: 1380
 
+
 ##############################################################################################
 Logger:
 
@@ -249,4 +251,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "runs/MajoranaDM"
+  default_output_path: "runs/DiracSingletDM_Z2"
