--- a/yaml_files/VectorSingletDM_Z2.yaml
+++ b/yaml_files/VectorSingletDM_Z2.yaml
@@ -1,6 +1,6 @@
 #################################################################################################
 #
-#      DiracDM
+#      VectorSingletDM_Z2
 #
 #################################################################################################
 
@@ -12,16 +12,13 @@ Parameters:
     mH:
       range: [124.1, 127.3]
 
-  DiracDM:
-    mF: 
+  VectorSingletDM_Z2:
+    mV:
       range: [45., 10000.]
       prior_type: log
-    lF: 
-      range: [1e-6, 1]
+    lambda_hV:
+      range: [1e-4, 10.]
       prior_type: log
-    xi:
-      range: [0, 3.141592653589793238462643383279502884197]
-      prior_type: flat
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -35,11 +32,11 @@ Parameters:
   Halo_gNFW_rho0:
     rho0:
       range: [0.2, 0.8]
-    v0: 
+    v0:
       range: [216, 264]
     vesc:
       range: [437, 629]
-    vrot: 
+    vrot:
       same_as: Halo_gNFW_rho0::v0
     rs: 20.0
     r_sun: 8.5
@@ -58,7 +55,7 @@ ObsLikes:
     # LHC likelihoods
     - capability: lnL_Higgs_invWidth
       purpose:    LogLike
-      
+
     # Precision physics likelihoods
     - capability: lnL_h_mass
       purpose:    LogLike
@@ -70,68 +67,70 @@ ObsLikes:
     # Indirect detection
     - capability: lnL_FermiLATdwarfs
       purpose:    LogLike
-      
+
     - capability: IC79_loglike
       purpose:    LogLike
-      
-    # Direct detection  
+
+    # Direct detection
     - capability: LUX_2016_LogLikelihood
       purpose:    LogLike
 
     - capability: XENON1T_2018_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: PandaX_2016_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: PandaX_2017_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: PICO_60_2017_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: CRESST_II_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: CDMSlite_LogLikelihood
       purpose:    LogLike
-      
+
     - capability: DarkSide_50_LogLikelihood
       purpose:    LogLike
-      
+
     # SI nuclear nuisance parameter likelihood
     - capability: lnL_SI_nuclear_parameters
       purpose:    LogLike
-      
-    # SM nuisance parameter likelihoods     
+
+    # SM nuisance parameter likelihoods
     - capability: lnL_alpha_s
-      purpose:    LogLike    
-              
+      purpose:    LogLike
+
     # DM Local Halo likelihoods
     - capability: lnL_rho0
       purpose: LogLike
-      
+
     - capability: lnL_v0
       purpose: LogLike
-      
+
     - capability: lnL_vesc
       purpose: LogLike
-      
+
     # Other observables
     - capability: RD_oh2
       purpose:    Observable
 
     - capability: mwimp
       purpose:    Observable
-      
+
     - capability: sigmav
       purpose:    Observable
-      
+
     - capability: sigma_SI_p
       purpose:    Observable
 
-##############################################################################################
+    - capability: sigma_SI_n
+      purpose:    Observable
 
+##############################################################################################
 Rules:
 
   # Use the DarkBit native calculator for the relic density
@@ -141,21 +140,21 @@ Rules:
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
-      
+
   # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_v0
     function: lnL_v0_gaussian
     options:
       v0_obs: 240
       v0_obserr: 8
-            
+
   # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
   - capability: lnL_vesc
     function: lnL_vesc_gaussian
     options:
       vesc_obs: 533
       vesc_obserr: 31.9
-      
+
   # Set sigmal to 50+/- 15 MeV based on Bishara et al [arXiv:1707.06998]
   - capability: lnL_SI_nuclear_parameters
     function: lnL_sigmas_sigmal
@@ -165,13 +164,17 @@ Rules:
       sigmal_obs: 50.0
       sigmal_obserr: 15.0
 
-  # Choose to use capgen for solar capture
+  # Choose to use capgen for solar capture rate
   - capability: capture_rate_Sun
-    function: capture_rate_Sun_vnqn
-    
+    function: capture_rate_Sun_const_xsec_capgen
+
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
     function: RD_fraction_leq_one
+
+  # Choose to use DarkBit's own calculation of the direct detection couplings
+  - capability: DD_couplings
+    function: DD_couplings_VectorSingletDM_Z2
 
   # Choose to use DarkSUSY's yield tables for indirect detection
   - capability: SimYieldTable
@@ -184,10 +187,10 @@ Rules:
     function: all_decays
 
   # Choose to obtain spectrum from the SpecBit module
-  - capability: DiracDM_spectrum
-    function: get_DiracDM_spectrum
-    options: 
-      impose_EFT_validity: true
+  - capability: VectorSingletDM_Z2_spectrum
+    function: get_VectorSingletDM_Z2_spectrum
+    options:
+      impose_pert_unitarity: true
 
 ##############################################################################################
 Printer:
@@ -195,9 +198,9 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "DiracDM.hdf5"
+    output_file: "VectorSingletDM_Z2.hdf5"
     delete_file_on_restart: true
-    group: "/DDM"    
+    group: "/VDM"
 
 ##############################################################################################
 Scanner:
@@ -224,7 +227,6 @@ Scanner:
       plugin: twalk
       sqrtR: 1.001
       timeout_mins: 1380
-      
 
 ##############################################################################################
 Logger:
@@ -251,4 +253,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "runs/DiracDM"
+  default_output_path: "runs/VectorSingletDM_Z2"
