--- a/yaml_files/DecayBit_ScalarSingletDM_Z2.yaml
+++ b/yaml_files/DecayBit_ScalarSingletDM_Z2.yaml
@@ -15,7 +15,7 @@ Parameters:
     mH:
       fixed_value: 125.9
 
-  SingletDM:
+  ScalarSingletDM_Z2:
     mS:
       range: [45, 100]
       prior_type: log
@@ -55,8 +55,8 @@ Rules:
   - capability: decay_rates
     function: all_decays
 
-  - capability: SingletDM_spectrum
-    function: get_SingletDM_spectrum
+  - capability: ScalarSingletDM_Z2_spectrum
+    function: get_ScalarSingletDM_Z2_spectrum
 
   - capability: muon_gm2_SM
     function: gm2_SM_ee
@@ -91,4 +91,4 @@ KeyValues:
   likelihood:
     model_invalid_for_lnlike_below: -1e6
 
-  default_output_path: "runs/DecayBit_SingletDM"
+  default_output_path: "runs/DecayBit_ScalarSingletDM_Z2"
