--- a/SingletDM_Z3_full.yaml
+++ b/SingletDM_Z3_full.yaml
@@ -1,58 +1,61 @@
-
 Parameters:
 
-    nuclear_params_sigmas_sigmal:
-      deltad: -0.427
-      deltas: -0.085
-      deltau: 0.842
-      sigmal: 58.0
-      sigmas: 43.0
-    StandardModel_Higgs_running:
-      QEWSB: 173.0
-      mH: 124.482490286
-    SingletDMZ3:
-      lambda_S: 3.47660253356
-      lambda_hS: 0.00174564011165
-      mS: 113.817128079
-      mu3: 217.168850595
-    StandardModel_SLHA2:
-      CKM_A: 0.814
-      CKM_etabar: 0.353
-      CKM_lambda: 0.22537
-      CKM_rhobar: 0.117
-      GF: 1.1663787e-05
-      alpha1: 0.0
-      alpha2: 0.0
-      alphaS: 0.118103326875
-      alphainv: 127.94001
-      delta13: 0.0
-      mBmB: 4.18
-      mCmC: 1.275
-      mD: 0.0046683046683
-      mE: 0.000510998928
-      mMu: 0.105658372
-      mNu1: 0.0
-      mNu2: 0.0
-      mNu3: 0.0
-      mS: 0.095
-      mT: 173.344937861
-      mTau: 1.77682
-      mU: 0.00224078624079
-      mZ: 91.1876
-      theta12: 0.58376
-      theta13: 0.15495
-      theta23: 0.76958
-    Halo_gNFW_rho0:
-      alpha: 1.0
-      beta: 3.0
-      gamma: 1.0
-      r_sun: 8.5
-      rho0: 0.206705794972
-      rs: 20.0
-      v0: 235.0
-      vesc: 550.0
-      vrot: 235.0
-
+  Halo_gNFW_rho0:
+    alpha: 1
+    beta: 3
+    gamma: 1
+    r_sun: 8.5
+    rho0: 0.242531
+    rs: 20
+    v0: 222.662
+    vesc: 550
+    vrot: 222.662
+  ScalarSingletDM_Z3:
+    mS:
+      range: [45., 10000.]
+      prior_type: log
+    lambda_hS:
+      range: [0.0001, 10.00]
+      prior_type: log
+    mu3: 0.0
+  StandardModel_Higgs_running:
+    Qin:
+      same_as: ScalarSingletDM_Z3::mS
+    QEWSB: 173
+    mH: 100.339
+  StandardModel_SLHA2:
+    CKM_A: 0.814
+    CKM_etabar: 0.353
+    CKM_lambda: 0.22537
+    CKM_rhobar: 0.117
+    GF: 1.16638e-05
+    alpha1: 0
+    alpha2: 0
+    alphaS: 0.118309
+    alphainv: 127.94
+    delta13: 0
+    mBmB: 4.18
+    mCmC: 1.275
+    mD: 0.0048
+    mE: 0.000510999
+    mMu: 0.105658
+    mNu1: 0
+    mNu2: 0
+    mNu3: 0
+    mS: 0.095
+    mT: 172.828
+    mTau: 1.77682
+    mU: 0.0023
+    mZ: 91.1876
+    theta12: 0.58376
+    theta13: 0.15495
+    theta23: 0.76958
+  nuclear_params_sigmas_sigmal:
+    deltad: -0.427
+    deltas: -0.085
+    deltau: 0.842
+    sigmal: 72.1006
+    sigmas: 45.2599
 
 
 Printer:
@@ -60,33 +63,23 @@ Printer:
   options:
     output_file: "gambit_output.hdf5"
     group: "/singlet"
-    delete_file_if_exists: true
+    delete_file_if_exists: false
     delete_file_on_restart: true
+    disable_combine_routines: true
 
 
 Scanner:
 
- use_scanner: random
+  use_scanner: random
 
- scanners:
+  scanners:
 
-    diver:
-      plugin: diver
-      like: LogLike
-      NP: 50000
-      verbosity: 1
-      convthresh: 0.0001
-      
     random:
       plugin: random
-      point_number: 1
-      like: LogLike         
+      point_number: 500
+      like: LogLike
 
 ObsLikes:
-
-    - capability: dump_GammaSpectrum
-      purpose: Observable
-
 
     # LHC likelihoods
     - capability: lnL_Higgs_invWidth
@@ -95,16 +88,13 @@ ObsLikes:
     # Precision physics likelihoods
     - capability: lnL_h_mass
       purpose:    LogLike
-      
+
     # Vacuum stability and perturbitivity
-    - capability: check_EW_stability_SingletDMZ3
-      purpose: LogLike
-    
-    - capability: VS_likelihood
+    - capability: lnL_EW_vacuum
       purpose: LogLike
 
-    #- capability: check_perturb_min_lambda
-    #  purpose: LogLike
+    - capability: lnL_high_scale_vacuum
+      purpose: LogLike
 
     # Dark matter likelihoods
     - capability: lnL_oh2
@@ -113,13 +103,7 @@ ObsLikes:
     - capability: lnL_FermiLATdwarfs
       purpose:    LogLike
 
-    - capability: XENON100_2012_LogLikelihood
-      purpose:    LogLike
-
     - capability: XENON1T_2017_LogLikelihood
-      purpose:    LogLike
-
-    - capability: LUX_2015_LogLikelihood
       purpose:    LogLike
 
     - capability: LUX_2016_LogLikelihood
@@ -128,66 +112,79 @@ ObsLikes:
     - capability: PandaX_2016_LogLikelihood
       purpose:    LogLike
 
-    - capability: SuperCDMS_2014_LogLikelihood
-      purpose:    LogLike
-
-    - capability: IC79_loglike
+    - capability: PandaX_2017_LogLikelihood
       purpose:    LogLike
 
     # SI nuclear nuisance parameter likelihood
     - capability: lnL_SI_nuclear_parameters
       purpose:    LogLike
 
+    # DM Local Halo likelihoods
+    - capability: lnL_rho0
+      purpose: LogLike
+
+    - capability: lnL_v0
+      purpose: LogLike
+
+
     # SM nuisance parameter likelihoods
     - capability: lnL_t_mass
       purpose:    LogLike
 
-    # Observables
-    - capability: find_non_perturb_scale
-      function: find_non_perturb_scale_SingletDMZ3
-      module: SpecBit
-      purpose: Observable
-
-    - capability: get_lambdaB
-      purpose: Observable
-
-    - capability: expected_lifetime
-      purpose: Observable
-
     - capability: lnL_alpha_s
       purpose:    LogLike
 
-    # Other observables
+    # Observables
+    - capability: scale_of_nonperturbativity
+      function: find_non_perturb_scale_ScalarSingletDM_Z3
+      module: SpecBit
+      purpose: Observable
+
+    - capability: lambdaB
+      purpose: Observable
+
+    - capability: expected_vacuum_lifetime
+      purpose: Observable
+
+    - purpose:    Observable
+      capability: mwimp
+
+    - purpose:    Observable
+      capability: sigmav
+
+    - purpose:    Observable
+      capability: sigma_SI_p
+
+    - purpose:    Observable
+      capability: sigma_SI_n
     - purpose:    Observable
       capability: RD_oh2
-      
-    # Get fraction of semi-annhillation
+
     - purpose: Observable
-      capability: get_channel_MicrOmegas      
-      
-    - capability: SingletDMZ3_spectrum
+      capability: semi_annihilation_fraction
+
+    - capability: ScalarSingletDM_Z3_spectrum
       purpose: Observable
-      function: get_SingletDMZ3_spectrum_as_map
+      function: get_ScalarSingletDM_Z3_spectrum_as_map
       dependencies:
-         - capability: SingletDMZ3_spectrum
+         - capability: ScalarSingletDM_Z3_spectrum
            type: Spectrum
 
 Rules:
 
-  # Compute spectrum with FS and check for perturbitivity up to top mass scale (default).
-# Invalidate if not perturabitive.
- # - capability: SingletDMZ3_spectrum
- #   function: get_SingletDMZ3_spectrum_pole
- #   options:
- #     check_perturb: false
- #     check_perturb_pts: 10
-      
+  # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
+  - capability: lnL_v0
+    function: lnL_v0_gaussian
+    options:
+      v0_obs: 240
+      v0_obserr: 8
+
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
-    function: RD_fraction_leq_one       
-       
+    function: RD_fraction_leq_one
+
   - capability: vacuum_stability
-    function: find_min_lambda_SingletDMZ3
+    function: find_min_lambda_ScalarSingletDM_Z3
     module: SpecBit
 
   - capability: lnL_oh2
@@ -198,8 +195,8 @@ Rules:
        profile_systematics: false # Use likelihood version that has been profiled over systematics
        oh2_fractional_theory_error: 0.05
 
-  
-  - function: MicrOmegas_SingletDMZ3_3_6_9_2_init
+
+  - function: MicrOmegas_ScalarSingletDM_Z3_3_6_9_2_init
     options:
        VZdecay: 1 # 0 - no 3 body final states, 1 - virtual Z in annihilations, 2 - virtual Z in coannihilations
        VWdecay: 1 # 0 - no 3 body final states, 1 - virtual W in annihilations, 2 - virtual W in coannihilations
@@ -208,13 +205,22 @@ Rules:
   - capability: decay_rates
     function: all_decays
 
+
+# Compute spectrum with FS and check for perturbitivity up to top mass scale (default).
+# Invalidate if not perturabitive.
+  - capability: ScalarSingletDM_Z3_spectrum_pole
+    function: get_ScalarSingletDM_Z3_spectrum
+    options:
+      check_perturb: false
+      check_perturb_pts: 10
+
   - capability: RD_oh2_Xf_MicrOmegas
     function: RD_oh2_Xf_MicrOmegas
     options:
       fast: 1  # 0: standard (default), 1: fast
       Beps: 1e-5  #  1e-5: standard, 1: switches coann off
     backends:
-    - {backend: MicrOmegas_SingletDMZ3}
+    - {backend: MicrOmegas_ScalarSingletDM_Z3}
 
   - capability: RD_oh2
     function: RD_oh2_MicrOmegas
@@ -222,7 +228,7 @@ Rules:
   - capability: get_channel_MicrOmegas
     function: get_channel_MicrOmegas
     backends:
-    - {backend: MicrOmegas_SingletDMZ3}
+    - {backend: MicrOmegas_ScalarSingletDM_Z3}
 
   # Choose to use detailed Fermi Pass 8 dwarf likelihoood from gamlike
   - capability: lnL_FermiLATdwarfs
@@ -236,25 +242,26 @@ Rules:
 
   # Use DarkBit's own calculations of the direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_SingletDMZ3
+    function: DD_couplings_ScalarSingletDM_Z3
 
   # Choose to get decays from DecayBit proper, not from an SLHA file.
   - capability: decay_rates
     function: all_decays
 
-
 Logger:
 
   redirection:
-    [Debug] : "debug.log"
-    [Default] : "default.log"
-    [DecayBit] : "DecayBit.log"
-    [DarkBit] : "DarkBit.log"
-    [PrecisionBit] : "PrecisionBit.log"
-    [FlavBit] : "FlavBit.log"
-    [ColliderBit] : "ColliderBit.log"
-    [SpecBit] : "SpecBit.log"
     [Dependency Resolver] : "dep_resolver.log"
+    [Backends]: "backends.log"
+    [Core]: "core.log"
+    [Printers]: "printers.log"
+    [Logger]: "logger.log"
+    [Models]: "models.log"
+    [Scanner]: "scanner.log"
+    [Utilities]: "utils.log"
+    [Error]: "errors.log"
+    [DecayBit,Warning] : "DecayBit.log"
+    [SpecBit,Warning] : "SpecBit.log"
 
 KeyValues:
 
@@ -269,5 +276,5 @@ KeyValues:
   debug: true
 
   # Set the output path for the log files (relative to working directory unless absolute path is specified)
-  default_output_path: "runs/SingletDM-DarkBit/"
-  #default_output_path: "/home/mmm0290/Scratch/gambit/SingletDM_Z2_full"
+  #default_output_path: "runs/SingletDM-DarkBit/"
+  default_output_path: "runs/SingletDM_Z3_full_2/"
