--- a/yaml_files/SpecBit_vacuum_stability_MDM.yaml
+++ b/yaml_files/SpecBit_vacuum_stability_MDM.yaml
@@ -11,47 +11,48 @@
 
 Parameters:
 
-    StandardModel_SLHA2:
-      mT:
-         range: [120,220]
+  StandardModel_SLHA2:
+    mT:
+      range: [120,220]
 
-      alphainv:  1.27940010E+02 # alpha^{-1}(mZ)^MSbar *
-      GF      :  1.16637870E-05 # G_Fermi **
-      alphaS  :  1.18400000E-01 # alpha_s(mZ)^MSbar ^
-      mZ      :  9.11876000E+01 # mZ(pole) !
-      mBmB    :  4.18000000E+00 # mb(mb)^MSbar &
-      mTau    :  1.77682000E+00 # mtau(pole) §
-      mNu3    :               0 # mnu3(pole)
+    alphainv:  1.27940010E+02 # alpha^{-1}(mZ)^MSbar *
+    GF      :  1.16637870E-05 # G_Fermi **
+    alphaS  :  1.18400000E-01 # alpha_s(mZ)^MSbar ^
+    mZ      :  9.11876000E+01 # mZ(pole) !
+    mBmB    :  4.18000000E+00 # mb(mb)^MSbar &
+    mTau    :  1.77682000E+00 # mtau(pole) §
+    mNu3    :               0 # mnu3(pole)
 
-      mE      :  5.10998928E-04 # melectron(pole) § **
-      mNu1    :               0 # mnu1(pole)
-      mMu     :  1.05658372E-01 # mmuon(pole) §
-      mNu2    :               0 # mnu2(pole)
-      mD      :  4.80000000E-03 # md(2 GeV)^MSbar @
-      mU      :  2.30000000E-03 # mu(2 GeV)^MSbar @
-      mS      :  9.50000000E-02 # ms(2 GeV)^MSbar @
-      mCmC    :  1.27500000E+00 # mc(mc)^MSbar %
+    mE      :  5.10998928E-04 # melectron(pole) § **
+    mNu1    :               0 # mnu1(pole)
+    mMu     :  1.05658372E-01 # mmuon(pole) §
+    mNu2    :               0 # mnu2(pole)
+    mD      :  4.80000000E-03 # md(2 GeV)^MSbar @
+    mU      :  2.30000000E-03 # mu(2 GeV)^MSbar @
+    mS      :  9.50000000E-02 # ms(2 GeV)^MSbar @
+    mCmC    :  1.27500000E+00 # mc(mc)^MSbar %
 
-      CKM_lambda  :  0.22537
-      CKM_A       :  0.814
-      CKM_rhobar  :  0.117
-      CKM_etabar  :  0.353
+    CKM_lambda  :  0.22537
+    CKM_A       :  0.814
+    CKM_rhobar  :  0.117
+    CKM_etabar  :  0.353
 
-      theta12 :  0.58376 # solar angle
-      theta23 :  0.76958 # atmospheric mixing angle
-      theta13 :  0.15495 #
-      delta13 :  0       # Dirac CP-violating phase
-      alpha1  :  0       # first Majorana CP-violating phase
-      alpha2  :  0       # second CP-violating Majorana phase
+    theta12 :  0.58376 # solar angle
+    theta23 :  0.76958 # atmospheric mixing angle
+    theta13 :  0.15495 #
+    delta13 :  0       # Dirac CP-violating phase
+    alpha1  :  0       # first Majorana CP-violating phase
+    alpha2  :  0       # second CP-violating Majorana phase
 
-    StandardModel_Higgs_running:
-      mH:
-        range: [90,180]
-        # prior_type: flat
-      QEWSB: 173
+  StandardModel_Higgs_running:
+    mH:
+      range: [90,180]
+    QEWSB: 173
+    Qin: 9600
+#      same_as: MDM::mChi
 
-    MDM:
-      mChi: 9600
+  MDM:
+    mChi: 9600
 
 Printer:
 
@@ -78,10 +79,10 @@ Scanner:
 
 ObsLikes:
 
-    - capability: VS_likelihood
+    - capability: lnL_high_scale_vacuum
       purpose: LogLike
 
-    - capability: expected_lifetime
+    - capability: expected_vacuum_lifetime
       purpose: Observable
 
     - capability: MDM_spectrum
@@ -94,7 +95,7 @@ ObsLikes:
 
 Rules:
 
-    - capability: vacuum_stability
+    - capability: high_scale_vacuum_info
       function: find_min_lambda_MDM
       module: SpecBit
       options:
