(I think I) fixed warning about symbol visibility by making all symbols hidden by default, and made it possible to load versioned python backends as well as proper python packages. 	renamed:    Backends/examples/libsecond/1.0/libsecond.py -> Backends/examples/libsecond/1.0/libsecond_1_0.py 	renamed:    Backends/examples/libsecond/1.1/libsecond.py -> Backends/examples/libsecond/1.1/libsecond_1_1.py 	modified:   Backends/include/gambit/Backends/backend_macros.hpp 	modified:   Backends/include/gambit/Backends/frontends/LibSecond_1_1.hpp 	modified:   Backends/include/gambit/Backends/interoperability_macros.hpp 	modified:   Backends/include/gambit/Backends/mathematica_helpers.hpp 	modified:   Backends/src/backend_info.cpp 	modified:   CMakeLists.txt 	modified:   cmake/executables.cmake 	modified:   config/backend_locations.yaml.default 	modified:   yaml_files/Python_test.yaml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,6 @@ if (CMAKE_CXX_COMPILER MATCHES "gcc$")
   message(FATAL_ERROR "\nYou have set CMAKE_CXX_COMPILER to gcc.  I don't think that means what you think it means.  Do you really want to compile C++ with gcc rather than g++?")
 endif()
 
-
 # Use ccache to speed up re-compiling if it is available
 #find_program(CCACHE_FOUND ccache)
 #if(CCACHE_FOUND)
@@ -147,7 +146,6 @@ endif()
 foreach(module yaml os re datetime sys getopt shutil itertools)
   find_python_module(${module} REQUIRED)
 endforeach()
-
 
 # Check for axel
 find_program(axel_FOUND axel)
@@ -323,6 +321,13 @@ else()
   set(GAMBIT_C_FLAGS "${CMAKE_C_FLAGS}")
   set(GAMBIT_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
   set(GAMBIT_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}")
+endif()
+
+# Make symbols hidden by default when compiling GAMBIT source files
+if(${CMAKE_MAJOR_VERSION} MATCHES "2")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fvisibility-inlines-hidden")
+else()
+  set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 endif()
 
 # Check for optional packages and disable sections of GAMBIT accordingly
