--- a/yaml_files/Python_test.yaml
+++ b/yaml_files/Python_test.yaml
@@ -21,18 +21,7 @@ Priors:
 
 Printer:
 
-  printer: hdf5
-  options:
-    output_file: "results.hdf5"
-    group: "/spartan"
-    delete_file_on_restart: true
-
-  #printer: ascii
-  #options:
-  #  output_file: "results.dat"
-  #  buffer_length: 10
-  #  delete_file_on_restart: true
-
+  printer: cout
 
 Scanner:
 
