More fixes in support of proper usage of symbol visibility and python backend package loaded.
	modified:   Backends/examples/libfourth/1.0/libfourth_1_0/__init__.py
	modified:   Backends/examples/libfourth/1.1/libfourth_1_1/__init__.py
	deleted:    Backends/examples/libthird.py
	modified:   Backends/include/gambit/Backends/backend_macros.hpp
	modified:   Backends/include/gambit/Backends/frontend_macros.hpp
	modified:   Backends/include/gambit/Backends/frontends/LibSecond_1_1.hpp
	new file:   Backends/src/frontends/LibSecond_1_1.cpp
	modified:   CMakeLists.txt
	modified:   ScannerBit/scripts/scanner+_harvester.py
	modified:   cmake/backends.cmake
	modified:   cmake/contrib.cmake
	modified:   cmake/optional.cmake
	modified:   cmake/scanners.cmake
	modified:   cmake/toy_backends.cmake
	modified:   cmake/utilities.cmake
	modified:   contrib/yaml-cpp-0.6.2/CMakeLists.txt
	modified:   yaml_files/Python_test.yaml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -291,10 +291,13 @@ include(cmake/FindLibDL.cmake)
 include(cmake/warnings.cmake)
 
 # Construct the full set of compiler flags to be used for external projects
+set(BACKEND_C_FLAGS_NO_BUILD_OPTIMISATIONS "${CMAKE_C_FLAGS}")
+set(BACKEND_CXX_FLAGS_NO_BUILD_OPTIMISATIONS "${CMAKE_CXX_FLAGS}")
+set(BACKEND_Fortran_FLAGS_NO_BUILD_OPTIMISATIONS "${CMAKE_Fortran_FLAGS}")
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-  set(GAMBIT_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_DEBUG}")
-  set(GAMBIT_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG}")
-  set(GAMBIT_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS_DEBUG}")
+  set(BACKEND_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_DEBUG}")
+  set(BACKEND_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG}")
+  set(BACKEND_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS_DEBUG}")
 elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
   # Unless invoked with FORCE_O3, drop down to -O2 optimisation for more reasonable compile time.
   if (NOT DEFINED FORCE_O3)
@@ -302,28 +305,28 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
     string(REGEX REPLACE "(-O3)" "-O2" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
     string(REGEX REPLACE "(-O3)" "-O2" CMAKE_Fortran_FLAGS_RELEASE "${CMAKE_Fortran_FLAGS_RELEASE}")
   endif()
-  set(GAMBIT_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_RELEASE}")
-  set(GAMBIT_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}")
-  set(GAMBIT_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS_RELEASE}")
+  set(BACKEND_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_RELEASE}")
+  set(BACKEND_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}")
+  set(BACKEND_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS_RELEASE}")
   # Never send the -O3 from cmake's release build config onwards to backends, as some are touchy.
-  string(REGEX REPLACE "(-O3)" "-O2" GAMBIT_C_FLAGS "${GAMBIT_C_FLAGS}")
-  string(REGEX REPLACE "(-O3)" "-O2" GAMBIT_CXX_FLAGS "${GAMBIT_CXX_FLAGS}")
-  string(REGEX REPLACE "(-O3)" "-O2" GAMBIT_Fortran_FLAGS "${GAMBIT_Fortran_FLAGS}")
+  string(REGEX REPLACE "(-O3)" "-O2" BACKEND_C_FLAGS "${BACKEND_C_FLAGS}")
+  string(REGEX REPLACE "(-O3)" "-O2" BACKEND_CXX_FLAGS "${BACKEND_CXX_FLAGS}")
+  string(REGEX REPLACE "(-O3)" "-O2" BACKEND_Fortran_FLAGS "${BACKEND_Fortran_FLAGS}")
 elseif(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
-  set(GAMBIT_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_RELWITHDEBINFO}")
-  set(GAMBIT_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
-  set(GAMBIT_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS_RELWITHDEBINFO}")
+  set(BACKEND_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_RELWITHDEBINFO}")
+  set(BACKEND_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
+  set(BACKEND_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS_RELWITHDEBINFO}")
 elseif(CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
-  set(GAMBIT_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_MINSIZEREL}")
-  set(GAMBIT_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_MINSIZEREL}")
-  set(GAMBIT_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS_MINSIZEREL}")
+  set(BACKEND_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_MINSIZEREL}")
+  set(BACKEND_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_MINSIZEREL}")
+  set(BACKEND_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS_MINSIZEREL}")
 else()
-  set(GAMBIT_C_FLAGS "${CMAKE_C_FLAGS}")
-  set(GAMBIT_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-  set(GAMBIT_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}")
+  set(BACKEND_C_FLAGS "${CMAKE_C_FLAGS}")
+  set(BACKEND_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+  set(BACKEND_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}")
 endif()
 
-# Make symbols hidden by default when compiling GAMBIT source files
+# Make symbols hidden by default when compiling GAMBIT source files only
 if(${CMAKE_MAJOR_VERSION} MATCHES "2")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fvisibility-inlines-hidden")
 else()
@@ -449,11 +452,14 @@ include(cmake/externals.cmake)
 # Add GAMBIT subdirectories.
 add_subdirectory(Logs)
 add_subdirectory(Utils)
+add_subdirectory_if_present(Core)
 add_subdirectory_if_present(Models)
 add_subdirectory_if_present(Backends)
 add_subdirectory_if_present(Elements)
 add_subdirectory_if_present(Printers)
-add_subdirectory_if_present(Core)
+make_symbols_visible(Logs)
+make_symbols_visible(Utils)
+make_symbols_visible(Printers)
 
 # Lists of different GAMBIT object files to link
 set(GAMBIT_BASIC_COMMON_OBJECTS "${GAMBIT_BASIC_COMMON_OBJECTS}" $<TARGET_OBJECTS:Logs> $<TARGET_OBJECTS:Utils>)
