Finished implementing automated frontending of functions and variables in python package sub-modules. 	new file:   Backends/examples/libthird/1.0/libthird_1_0/sub_module.py 	new file:   Backends/examples/libthird/1.1/libthird_1_1/sub_module.py 	modified:   Backends/include/gambit/Backends/frontends/LibFortran_1_0.hpp 	modified:   Backends/include/gambit/Backends/frontends/LibSecond_1_0.hpp 	modified:   Backends/include/gambit/Backends/frontends/LibSecond_1_1.hpp 	modified:   Backends/include/gambit/Backends/frontends/LibThird_1_0.hpp 	modified:   Backends/include/gambit/Backends/frontends/LibThird_1_1.hpp 	modified:   Backends/include/gambit/Backends/python_function.hpp 	modified:   Backends/include/gambit/Backends/python_helpers.hpp 	modified:   Backends/include/gambit/Backends/python_variable.hpp 	new file:   Backends/src/frontends/LibThird_1_0.cpp 	new file:   Backends/src/frontends/LibThird_1_1.cpp 	modified:   Backends/src/python_helpers.cpp 	modified:   ExampleBit_B/include/gambit/ExampleBit_B/ExampleBit_B_rollcall.hpp 	modified:   config/capabilities.dat 	modified:   yaml_files/Python_test.yaml

--- a/yaml_files/Python_test.yaml
+++ b/yaml_files/Python_test.yaml
@@ -49,9 +49,9 @@ Rules:
 
   - capability:  nevents_postcuts
     backends:
-    - {capability: awesomeness, backend: LibSecond, version: 1.1}
-    - {capability: someFunction, backend: LibSecond, version: 1.1}
-    - {capability: SomeInt, backend: LibSecond, version: 1.1}
+    - {capability: awesomeness, backend: LibThird, version: 1.1}
+    - {capability: someFunction, backend: LibThird, version: 1.1}
+    - {capability: SomeInt, backend: LibThird, version: 1.1}
 
   - capability:  function_pointer
     backends:
@@ -60,6 +60,10 @@ Rules:
   - capability: nevents
     type: int
     function: event_count
+    module: ExampleBit_B
+
+  - capability: particle_id
+    function: particle_identity
     module: ExampleBit_B
 
 Logger:
