Started work on setup for including/excluding RestFrames and RestFrames-dependent code in ColliderBit.
	modified:   ColliderBit/src/analyses/Analysis_ATLAS_13TeV_RJ3L_lowmass_36invfb.cpp
	modified:   ColliderBit/src/analyses/HEPUtilsAnalysisContainer.cpp
	new file:   cmake/FindRestFrames.cmake
	modified:   cmake/cmake_variables.hpp.in
	modified:   cmake/optional.cmake

--- a/cmake/cmake_variables.hpp.in
+++ b/cmake/cmake_variables.hpp.in
@@ -60,6 +60,12 @@
 /// Found ROOT version 6 or later
 #cmakedefine ROOT_6_OR_LATER_FOUND 1
 
+/// Leave out ROOT
+#cmakedefine EXCLUDE_ROOT 1
+
+/// Leave out RestFrames
+#cmakedefine EXCLUDE_RESTFRAMES 1
+
 /// Version info
 /// @{
 #define GAMBIT_VERSION_MAJOR    @GAMBIT_VERSION_MAJOR@
