Made yaml-cpp, FlexibleSUSY, Logs, Utils and Printer symbols hidden by default, and explicitly published symbols for all individual classes and functions (that I have been able to determine are) necessary for proper scanner plugin operation.  Probably some more classes in the Printers directory will need to be declared with EXPORT_SYMBOLS to get the new postprocessor working properly. 	modified:   CMakeLists.txt 	modified:   Printers/include/gambit/Printers/printer_id_tools.hpp 	modified:   ScannerBit/include/gambit/ScannerBit/plugin_loader.hpp 	modified:   ScannerBit/include/gambit/ScannerBit/scanner_utils.hpp 	modified:   ScannerBit/scripts/scanner+_harvester.py 	modified:   Utils/include/gambit/Utils/exceptions.hpp 	modified:   Utils/include/gambit/Utils/mpiwrapper.hpp 	modified:   Utils/include/gambit/Utils/standalone_error_handlers.hpp 	modified:   Utils/include/gambit/Utils/threadsafe_rng.hpp 	modified:   Utils/include/gambit/Utils/util_functions.hpp 	modified:   Utils/include/gambit/Utils/util_macros.hpp 	modified:   cmake/contrib.cmake 	modified:   contrib/yaml-cpp-0.6.2/CMakeLists.txt 	modified:   contrib/yaml-cpp-0.6.2/include/yaml-cpp/dll.h 	modified:   yaml_files/pp_strip.yaml 	modified:   yaml_files/spartan.yaml

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -37,14 +37,14 @@ Printer:
 
 Scanner:
 
-  use_scanner: twalk
+  use_scanner: de
 
   scanners:
 
     de:
       plugin: diver
       like: LogLike
-      NP: 5000
+      NP: 500
 
     multinest:
       plugin: multinest
@@ -89,7 +89,7 @@ KeyValues:
 
   rng: ranlux48
 
-  print_timing_data: true 
+  print_timing_data: true
 
   likelihood:
     model_invalid_for_lnlike_below: -1e6
