--- a/yaml_files/pp_strip.yaml
+++ b/yaml_files/pp_strip.yaml
@@ -1,11 +1,11 @@
-# This is a simple example usage of the postprocessor scanner to 
+# This is a simple example usage of the postprocessor scanner to
 # strip 'invalid' points out of GAMBIT output.
 #
 # Here we do this by setting a cut to keep only points above
-# an extremely small likelihood threshold, such that only 
+# an extremely small likelihood threshold, such that only
 # invalid points would fail it.
 #
-# To test this out, please first run yaml_files/spartan.yaml 
+# To test this out, please first run yaml_files/spartan.yaml
 # to generate the output which we will postprocess
 
 Parameters:
@@ -31,17 +31,17 @@ Scanner:
 
       plugin: postprocessor
       # Name of the new global likelihood contribution. This will be zero in this simple example
-      like: New_LogLike 
-       
-      # Add LogLike in the old output to New_LogLike in the new output.   
-      add_to_like: [LogLike]                                             
+      like: New_LogLike
+
+      # Add LogLike in the old output to New_LogLike in the new output.
+      add_to_like: [LogLike]
       # Allow overwriting of the old output with the new output.
       permit_discard_old_likes: true
       ## This will appear alongside New_Loglike, which will be the new things only.
-      reweighted_like: LogLike       
+      reweighted_like: LogLike
       # Interval between progress reports to stdout (0=none, default 1000)
       update_interval: 1000
- 
+
       # Restrict postprocessing to values greater than this
       cut_greater_than: {"LogLike": -1e99} # Super tiny value in log space!
       # Throw away all points outside the cuts
@@ -50,7 +50,7 @@ Scanner:
       # Choose the input stream
       reader:
         type: hdf5
-        file: "runs/spartan/samples/results.hdf5_temp_combined"
+        file: "runs/spartan/samples/results.hdf5"
         group: "/spartan"
 
 ObsLikes:
