Add assici_dict_reader to Utils; Read in BBN data file

--- a/yaml_files/CosmoBit_AlterBBN.yaml
+++ b/yaml_files/CosmoBit_AlterBBN.yaml
@@ -97,8 +97,8 @@ Rules:
   - capability: BBN_LogLike
     function: compute_BBN_LogLike
     options:
-        Yp:  2.527e-5
-        Delta_Yp: 0.030e-5
+        DataFile: PDG_2017.dat
+        
 
   - capability: plc_2_0_init
     options:
