--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -21,6 +21,7 @@
 #************************************************
 
 set(source_files src/ascii_table_reader.cpp
+                 src/ascii_dict_reader.cpp
                  src/exceptions.cpp
                  src/file_lock.cpp
                  src/mpiwrapper.cpp
@@ -41,6 +42,7 @@ set(source_files src/ascii_table_reader.cpp
 )
 
 set(header_files include/gambit/Utils/ascii_table_reader.hpp
+                 include/gambit/Utils/ascii_dict_reader.hpp
                  include/gambit/Utils/boost_fallbacks.hpp
                  include/gambit/Utils/cats.hpp
                  include/gambit/Utils/exceptions.hpp
