Fixed typedef for 'Flogical'.
	modified:   Backends/scripts/CBGB/modules/gb.py
	modified:   Utils/include/gambit/Utils/util_types.hpp
	modified:   config/resolution_type_equivalency_classes.yaml

--- a/config/resolution_type_equivalency_classes.yaml
+++ b/config/resolution_type_equivalency_classes.yaml
@@ -43,7 +43,8 @@
 ["std::map< std::pair < int, int >", double> map_intpair_dbl]
 
 # Fortran data types
-[bool, Flogical, Flogical1]
+[long int, Flogical]
+[bool, Flogical1]
 [char, Fcharacter]
 [int, Finteger]
 [short, Finteger2]
