Fixed Flogical type issue

--- a/config/resolution_type_equivalency_classes.yaml
+++ b/config/resolution_type_equivalency_classes.yaml
@@ -43,7 +43,7 @@
 ["std::map< std::pair < int, int >", double> map_intpair_dbl]
 
 # Fortran data types
-[long int, Flogical]
+[int32_t, Flogical]
 [bool, Flogical1]
 [char, Fcharacter]
 [int, Finteger]
